# Flare-Firmware

./: .clang-format  .example_clang_tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  build.ninja
.github/workflows/: ci.yml
firmware/CAN-DevBoard/: CAN-DevBoard.ioc  CMakeLists.txt  Makefile
firmware/CAN-DevBoard/Core/Inc/: main.h  stm32u5xx_hal_conf.h
firmware/CAN-DevBoard/Core/Src/: app_freertos.c  main.c  stm32u5xx_hal_msp.c  stm32u5xx_it.c
firmware/CAN-DevBoard/CubeMX/: Makefile
firmware/CAN-DevBoard/user/inc/: user_threads.hpp
firmware/CAN-DevBoard/user/src/: user_threads.cpp
firmware/Chase_Car_Server/: Extra_Writing.txt  index.html  server.py
firmware/LTC6810HG Driver/: LTC6810HG Driver.ioc
firmware/LTC6810HG Driver/Core/Inc/: LTC6810.hpp  LTC6810Registers.hpp
firmware/LTC6810HG Driver/Core/Src/: LTC6810.cpp  main.c  stm32l0xx_hal_msp.c
firmware/NUCLEOL476RG-FreeRTOS-ExampleProject/: CMakeLists.txt  NUCLEOL476RG-FreeRTOS-ExampleProject.ioc
firmware/NUCLEOL476RG-FreeRTOS-ExampleProject/Core/Inc/: FreeRTOSConfig.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
firmware/NUCLEOL476RG-FreeRTOS-ExampleProject/Core/Src/: freertos.c  main.c  main.cpp  stm32l4xx_hal_msp.c  stm32l4xx_it.c
firmware/NUCLEOL476RG-FreeRTOS-ExampleProject/CubeMX/: Makefile
firmware/NUCLEOL476RG-FreeRTOS-ExampleProject/user/inc/: test.hpp
firmware/NUCLEOL476RG-FreeRTOS-ExampleProject/user/src/: test.cpp
firmware/Telemetry/: Telemetry.ioc
firmware/Telemetry/Core/Inc/: main.h
firmware/Telemetry/Core/Inc/user_files/: app_main.h  rfd900x.h
firmware/Telemetry/Core/Src/: main.c
firmware/Telemetry/Core/Src/user_files/: app_main.c  rfd900x.c
resources/Drivers/SG_Drivers/BMS/Include/: BQ7692000.h
resources/Drivers/SG_Drivers/BMS/Src/: BQ7692000.cpp
resources/Drivers/SG_Drivers/CAN/Include/: CanDriver.hpp  CanDriverApi.hpp
resources/Drivers/SG_Drivers/CAN/Src/: CanDriver.cpp
resources/Drivers/SG_Drivers/Inc/: eeprom.hpp  eeprom93aa46.hpp  eeprom_93aa46.hpp  spi_target.hpp  stm32_hal_spi_target.hpp  transmit_status.hpp
resources/Drivers/SG_Drivers/Include/: BQ7692000.h  NRF24L01P.hpp  i2c_api.h  spi_api.h  spi_api.hpp  transmit_status.hpp
resources/Drivers/SG_Drivers/Src/: BQ7692000.cpp  NRF24L01P.cpp  eeprom_93aa46.cpp  stm32_hal_spi_target.cpp
resources/Drivers/SG_Drivers/eeprom/inc/: eeprom.hpp  eeprom_93aa46.hpp
resources/Drivers/SG_Drivers/eeprom/src/: eeprom_93aa46.cpp
